--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <h4 class="pre-tytle">Հուշանվերներ և նվերներ՝ հայկական զարդանախշերով</h4>
-            
+
             <nav id="menu">
                 <ul>
                     <li><a href="#top">Գլխավոր</a></li>
@@ -39,8 +39,8 @@
             </div>
 
             <div id="image">
-                <img class="pre-image" src="images/pre-image.jpg">
-                <img class="main-image" src="images/main-img-.jpg" alt="home image">
+                <img src="images/pre-image.jpg">
+                <img src="images/main-image.jpg" alt="aremenian ">
             </div>
         </header>
 
@@ -50,68 +50,70 @@
             </div>
 
             <div class="about-image">
-                <img class="image-about" src="images/about-image.jpg" alt="about-image"></div>
-            <div class="about-info">
-                <p class="p">Արվեստի վերածված ամեն միտք</p>
+                <img src="images/about-image.jpg" alt="about-image">
+            </div>
+            <div id="about-info">
+                <h3>Արվեստի վերածված ամեն միտք</h3>
                 <p class="p1">Հայա ձեռագործ բրենդը ներկայացնում է հուշանվերների և նվերների բազմազան տեսականի, որոնք ստեղծվել են համադրելով անհատական ստեղծագործական գաղափարները ազգային մոտիվների հետ։</p>
                 <p class="p2">Մեր ստեղծագործական թիմը մշտապես ներդնում է նորանոր ոճային մոտեցումներ և որակյալ դիզայն՝ այդպիսով ձեռագործ հուշանվերն ու նվերները դարձնելով եզակի և անկրկնելի։
                     Մեր նպատակն է ձեզ ներկայացնել անձնական փորձի և գեղագիտական մոտեցմամբ ստեղծված հուշանվերներ, որոնք հաճելի կլինի ունենալ տանը կամ նվիրել մտերիմներին։
                 </p>
+                <h2>Գտեք ձեզ անհրաժեշտ ձեռագործ նկարված <br>հուշանվերը կամ պատվիրեք անհատական <br>նվերներ՝ ձեր նախընտրությամբ։</h2>
             </div>
         </div>
         <div id="products">
-            <p class="tesakani">Տեսականի</p>
+            <p class="products-title">Տեսականի</p>
             <div id="blocks">
                 <div class="box">
-                    <img src="images/granats.jpg" alt="">
+                    <img src="images/granats.jpg" alt="Souvenirs granats">
                     <p>Այս խորհրդանշական նռները նվիրեք առիթով և անառիթ</p>
 
                 </div>
                 <div class="box">
-                    <img src="images/magnits.jpg" alt="">
+                    <img src="images/magnits.jpg" alt="Magnits">
                     <p>Մագնիսները մշտապես կհիշեցնեն ձեր հաճելի այցի մասին Հայաստան</p>
                 </div>
 
                 <div class="box">
-                    <img src="images/books.jpg" alt="">
+                    <img src="images/books.jpg" alt="Stone books">
                     <p>Բարեմաղթանքները, աղոթքներն ու ցանկությունները քարե գրքերում</p>
                 </div>
                 <div class="box">
-                    <img src="images/names.jpg" alt="">
+                    <img src="images/names.jpg" alt="Accessories with names">
                     <p>Անվան սկզբնատառերով հայկական քարեր</p>
                 </div>
 
                 <div class="box">
-                    <img src="images/big-tree-.jpg" alt="">
-                    <p>Բնական քարերով Կենաց ծառերն իրենց խորհուրդ ունեն և երջանկությւոն են բերում</p>
+                    <img src="images/big-tree.jpg" alt="Life trees">
+                    <p>Բնական քարերով Կենաց ծառերն իրենց խորհուրդն ունեն և երջանկություն են բերում</p>
                 </div>
 
                 <div class="box">
-                    <img src="images/modulayin_.jpg" alt="">
+                    <img src="images/modular.jpg" alt="Modular paintings">
                     <p>Ձեր նախընտրած նկարը՝ ձեր ընտրած չափսերով և ձևով։</p>
                 </div>
 
                 <div class="box">
-                    <img src="images/tree-.jpg" alt="">
+                    <img src="images/tree.jpg" alt="Trees with precious stones">
                     <p>Ամանորյա և տոնական աքսեսուարներ</p>
                 </div>
 
                 <div class="box">
-                    <img src="images/home.jpg" alt="">
+                    <img src="images/home.jpg" alt="Colored handmade stone-books">
                     <p>Քարե տնակներ՝ հուշանվերներ</p>
                 </div>
-
             </div>
         </div>
 
-        <p class="contact-bar">Կապ</p>
+        <p class="contact-title">Կապ</p>
         <div id="contact">
-            <h4 class="e-mail">haya@gmail.com</h4>
-            <h4 class="tel">+374 94 70 98</h4>
+            <h4>haya@gmail.com</h4>
+            <h4>+374 94 70 98</h4>
 
             <div class="social-media">
-                <a href="https://www.facebook.com/Haya.Anahit/" target="_blank"><img class="facebook" src="images/facebook-logo.png"></a>
-                <a href="https://www.instagram.com/haya_Anahit/?hl=ru" target="_blank"><img class="instagram" src="images/instagram-logo.png"></a>
+                <a href="https://www.facebook.com/Haya.Anahit/" target="_blank"><img src="images/facebook-logo.png"></a>
+                <a href="https://www.instagram.com/haya_Anahit/?hl=ru" target="_blank">
+                    <img src="images/instagram-logo.png"></a>
             </div>
         </div>
 
