--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Haya Souvenirs</title>
-        <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
+        <link rel="icon" type="image/png" href="images/favicon.png">
         <link rel="stylesheet" href="css/style.css">
     </head>
 
@@ -30,6 +30,7 @@
                 <h3>Մոդուլային նկարներ</h3>
                 <h3>Կավե ափսեներ</h3>
                 <h3>Կենաց ծառեր</h3>
+                <h3 class="souvenirs-small">բնական քարերից</h3>
                 <h3>Ծաղկեփնջեր՝</h3>
                 <h3 class="souvenirs-small">բնական քարերից</h3>
                 <h3>Նկարազարդ գրքեր</h3>
@@ -58,7 +59,7 @@
                 <p class="p2">Մեր ստեղծագործական թիմը մշտապես ներդնում է նորանոր ոճային մոտեցումներ և որակյալ դիզայն՝ այդպիսով ձեռագործ հուշանվերն ու նվերները դարձնելով եզակի և անկրկնելի։
                     Մեր նպատակն է ձեզ ներկայացնել անձնական փորձի և գեղագիտական մոտեցմամբ ստեղծված հուշանվերներ, որոնք հաճելի կլինի ունենալ տանը կամ նվիրել մտերիմներին։
                 </p>
-                <h2>Գտեք ձեզ անհրաժեշտ ձեռագործ նկարված <br>հուշանվերը կամ պատվիրեք անհատական <br>նվերներ՝ ձեր նախընտրությամբ։</h2>
+                <h2><i>Գտեք ձեզ անհրաժեշտ ձեռքով պատրաստված և<br> նկարված հուշանվերը կամ պատվիրեք անհատական <br>նվերներ՝ ձեր ընտրությամբ։</i></h2>
             </div>
         </div>
         <div id="products">
@@ -90,7 +91,7 @@
 
                 <div class="box">
                     <img src="images/modular.jpg" alt="Modular paintings">
-                    <p>Ձեր նախընտրած նկարը՝ ձեր ընտրած չափսերով և ձևով։</p>
+                    <p>Ձեր նախընտրած նկարը՝ ցանկացած չափսի և ձևի</p>
                 </div>
 
                 <div class="box">
@@ -107,8 +108,8 @@
 
         <p class="contact-title">Կապ</p>
         <div id="contact">
-            <h4>haya@gmail.com</h4>
-            <h4>+374 94 70 98</h4>
+            <h4>hayasouvenirs@gmail.com</h4>
+            <h4>+374 94 68 70 98</h4>
 
             <div class="social-media">
                 <a href="https://www.facebook.com/Haya.Anahit/" target="_blank"><img src="images/facebook-logo.png"></a>
